[maven-release-plugin] prepare release anhthao-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:thaohna/spring-pet-clinic-application.git</developerConnection>
+        <developerConnection>scm:git:git://github.com:thaohna/spring-pet-clinic-application.git</developerConnection>
       <tag>anhthao-pet-clinic-0.0.1</tag>
   </scm>
 
