--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>anhthao-pet-clinic</artifactId>
         <groupId>com.anhthao</groupId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
